--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Heatmaps</title>
+	<title>Dropdown Test for IE 8</title>
 
 	<meta name="viewport" content="width=device-width">
  
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="https://raw.github.com/twbs/bootstrap/master/dist/css/bootstrap-theme.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://raw.github.com/scottjehl/Respond/master/respond.min.js"></script>
@@ -59,7 +59,7 @@
 
 </div>
 
-
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 
