--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width">
  
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://raw.github.com/twbs/bootstrap/master/dist/css/bootstrap-theme.css" rel="stylesheet">
+  <link href="bootstrap-theme.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://raw.github.com/scottjehl/Respond/master/respond.min.js"></script>
