--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 	<meta name="viewport" content="width=device-width">
  
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap.css" rel="stylesheet">
   <link href="bootstrap-theme.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
-    <script src="https://raw.github.com/scottjehl/Respond/master/respond.min.js"></script>
+    <script src="respond.min.js"></script>
   <![endif]-->
 
 </head>
