--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!--[if lt IE 9]>
     <script src="respond.min.js"></script>
   <![endif]-->
+    <script src="modernizr.custom.70305.js"></script>
 
 </head>
 <body>
