--- a/without-theme.html
+++ b/without-theme.html
@@ -57,7 +57,7 @@
     </ul>
   </nav>
 
-<p><a href="without-theme.html">Test without theme</a>.
+<p><a href="index.html">With theme</a>.
 
 </div>
 
