links to each other reworded

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </ul>
   </nav>
 
-<p><a href="without-theme.html">No theme</a>.
+<p><a href="without-theme.html">Go to test without theme.</a>.
 
 
 </div>
