little more verbiage

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     </ul>
   </nav>
 
-<p><a href="without-theme.html">Go to test without theme.</a>.
+  <p>With <code>bootstrap-theme.css</code> included, dropdowns fail to work. (You can see a one-pixel line appear indicating they're attempting to work however.)</p>
+
+
+<p><a href="without-theme.html">Go to test without theme.</a>
 
 
 </div>
