--- a/without-theme.html
+++ b/without-theme.html
@@ -57,6 +57,8 @@
     </ul>
   </nav>
 
+<p>With <code>bootstrap-theme.css</code> not included, dropdowns work as expected.</p>
+
 <p><a href="index.html">Go to test with theme</a>.
 
 </div>
