html5shiv instead of modernizr

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link href="bootstrap-theme.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
+    <script src="html5shiv.js"></script>
     <script src="respond.min.js"></script>
   <![endif]-->
-    <script src="modernizr.custom.70305.js"></script>
 
 </head>
 <body>
