--- a/without-theme.html
+++ b/without-theme.html
@@ -10,9 +10,9 @@
   <link href="bootstrap.css" rel="stylesheet">
 
   <!--[if lt IE 9]>
+    <script src="html5shiv.js"></script>
     <script src="respond.min.js"></script>
   <![endif]-->
-    <script src="modernizr.custom.70305.js"></script>
 
 </head>
 <body>
